--- a/wiki/index.html
+++ b/wiki/index.html
@@ -579,6 +579,8 @@ Error message and password prompt
 
 <li>$:/state/toc/Formal language-Regular expression--1652963983</li>
 
+<li>$:/state/toc/Linux-LinuxTools-1152169851</li>
+
 <li>$:/state/toc/Linux-Signal-1152169851</li>
 
 <li>$:/state/toc/Programming language-Golang--890961047</li>
@@ -628,6 +630,8 @@ Error message and password prompt
 <li>$:/state/toc/TableOfContents/Development/Network-Virtualization--118161433</li>
 
 <li>$:/state/toc/TableOfContents/Development/OS-Linux--118161433</li>
+
+<li>$:/state/toc/TableOfContents/Development/OS/Linux-File&amp;IO--118161433</li>
 
 <li>$:/state/toc/TableOfContents/Development/OS/Linux-IPC--118161433</li>
 
@@ -895,8 +899,6 @@ Error message and password prompt
 
 <li>$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html</li>
 
-<li>$:/temp/tobibeer/preview-1-tiddler</li>
-
 <li>$:/temp/tobibeer/preview-2-tiddler</li>
 
 <li>$:/theme</li>
@@ -961,6 +963,10 @@ Error message and password prompt
 
 <li>etcd 无法watch</li>
 
+<li>Everything is a file</li>
+
+<li>File&amp;IO</li>
+
 <li>Formal language</li>
 
 <li>formal language</li>
@@ -1013,6 +1019,8 @@ Error message and password prompt
 
 <li>lsof</li>
 
+<li>Make</li>
+
 <li>Merkle tree</li>
 
 <li>monad</li>
@@ -1043,6 +1051,8 @@ Error message and password prompt
 
 <li>Positive lookbehind</li>
 
+<li>Process</li>
+
 <li>product type</li>
 
 <li>product types</li>
@@ -1054,6 +1064,8 @@ Error message and password prompt
 <li>ptrace</li>
 
 <li>Quote</li>
+
+<li>read/write</li>
 
 <li>recvq</li>
 
@@ -1117,6 +1129,8 @@ Error message and password prompt
 
 <li>Type Theory</li>
 
+<li>Unbuffered IO</li>
+
 <li>Untitled</li>
 
 <li>Virtualization</li>
@@ -1124,6 +1138,8 @@ Error message and password prompt
 <li>Welcome to Stroll</li>
 
 <li>WorkExperience</li>
+
+<li>write</li>
 
 <li>中断</li>
 
@@ -1140,6 +1156,8 @@ Error message and password prompt
 <li>用户态</li>
 
 <li>美团ddd</li>
+
+<li>阻塞(block)</li>
 
 </ul>
 </p>
@@ -18182,8 +18200,8 @@ exports.context = contextWidget;
 <div created="20200418122101344" modified="20200625051822456" title="$:/state/tab/moresidebar-1850697562">
 <pre>$:/core/ui/MoreSideBar/Explorer</pre>
 </div>
-<div created="20200418121835270" modified="20200630043441870" title="$:/state/tab/sidebar--595412856">
-<pre>TableOfContents</pre>
+<div created="20200418121835270" modified="20200630093539804" title="$:/state/tab/sidebar--595412856">
+<pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20200504200956301" modified="20200628155701482" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/EditorToolbar</pre>
@@ -18204,6 +18222,9 @@ exports.context = contextWidget;
 <pre>close</pre>
 </div>
 <div created="20200629161225106" modified="20200629161225106" title="$:/state/toc/Formal language-Regular expression--1652963983">
+<pre>open</pre>
+</div>
+<div created="20200630052207446" modified="20200630052207446" title="$:/state/toc/Linux-LinuxTools-1152169851">
 <pre>open</pre>
 </div>
 <div created="20200626110558550" modified="20200628060156990" title="$:/state/toc/Linux-Signal-1152169851">
@@ -18281,10 +18302,13 @@ exports.context = contextWidget;
 <div created="20200624162111260" modified="20200624162111260" title="$:/state/toc/TableOfContents/Development/OS-Linux--118161433">
 <pre>open</pre>
 </div>
-<div created="20200628080816068" modified="20200629165505136" title="$:/state/toc/TableOfContents/Development/OS/Linux-IPC--118161433">
+<div created="20200630081640736" modified="20200630081640736" title="$:/state/toc/TableOfContents/Development/OS/Linux-File&amp;IO--118161433">
+<pre>open</pre>
+</div>
+<div created="20200628080816068" modified="20200630084533872" title="$:/state/toc/TableOfContents/Development/OS/Linux-IPC--118161433">
 <pre>close</pre>
 </div>
-<div created="20200628082857651" modified="20200629170238759" title="$:/state/toc/TableOfContents/Development/OS/Linux-LinuxTools--118161433">
+<div created="20200628082857651" modified="20200630084535489" title="$:/state/toc/TableOfContents/Development/OS/Linux-LinuxTools--118161433">
 <pre>close</pre>
 </div>
 <div created="20200624162617345" modified="20200624162910764" title="$:/state/toc/TableOfContents/Development/OS/Linux-Signal--118161433">
@@ -18341,7 +18365,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20200628163506618" list="async-signal-safe [[async-signal-safe ]]" modified="20200630043455559" title="$:/StoryList">
+<div created="20200628163506618" list="read/write 阻塞(block)" modified="20200630093745784" title="$:/StoryList">
 <pre></pre>
 </div>
 <div bag="default" created="20191206235905940" modified="20200218074428072" revision="0" tags="$:/tags/Stylesheet" title="$:/styles/onlyice/ui-elements" type="text/vnd.tiddlywiki">
@@ -19387,14 +19411,11 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200502174943975" modified="20200521150755106" title="$:/temp/RenameTags/search">
 <pre>blinks</pre>
 </div>
-<div created="20200418122544376" modified="20200630043453297" title="$:/temp/search">
-<pre>signal</pre>
+<div created="20200418122544376" modified="20200630084541344" title="$:/temp/search">
+<pre>Process</pre>
 </div>
 <div created="20200626105030927" modified="20200626105030927" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html" url="https://tiddlywiki.com/library/v5.1.22/index.html">
 <pre>loaded</pre>
-</div>
-<div created="20200616161922967" modified="20200629161910825" title="$:/temp/tobibeer/preview-1-tiddler">
-<pre>Programming language</pre>
 </div>
 <div created="20200629161500897" modified="20200629161500897" title="$:/temp/tobibeer/preview-2-tiddler">
 <pre>Literature</pre>
@@ -19546,7 +19567,7 @@ Two common classes of algebraic types are [[product type]]s (i.e., tuples and re
 <div created="20200619180319289" modified="20200619180319289" title="alpine">
 <pre></pre>
 </div>
-<div created="20200628121633232" modified="20200630051815723" tags="Signal" title="async-signal-safe">
+<div created="20200628121633232" modified="20200630051826578" tags="Signal" title="async-signal-safe">
 <pre>! signal-safety
 !! async-signal-safe functions
 
@@ -19733,6 +19754,18 @@ In terms of classiful [[networks]], there are five classes: A, B, C, D, and E. C
 </div>
 <div created="20200617041601630" modified="20200617041630776" tags="etcd" title="etcd 无法watch" type="text/x-markdown">
 <pre>[auth token invalid after watch reconnects](https://github.com/etcd-io/etcd/issues/11954)</pre>
+</div>
+<div created="20200630081810644" modified="20200630081810644" title="Everything is a file">
+<pre></pre>
+</div>
+<div created="20200630081448242" modified="20200630081531143" tags="Linux" title="File&amp;IO">
+<pre>[[Linux]]
+&lt;div class=&quot;tc-table-of-contents&quot;&gt;
+
+&lt;&lt;toc-selective-expandable 'File&amp;IO' sort[ind]&gt;&gt;
+
+&lt;/div&gt;
+</pre>
 </div>
 <div created="20200626102426078" modified="20200629161222986" tags="Development" title="Formal language">
 <pre>In mathematics, computer science, and linguistics, a formal language consists of words whose letters are taken from an alphabet and are well-formed according to a specific set of rules.
@@ -19938,6 +19971,42 @@ In computer science, inter-process communication or interprocess communication (
 <div created="20200628054351273" modified="20200628054351273" title="lsof">
 <pre></pre>
 </div>
+<div created="20200630070725734" modified="20200630071144607" tags="LinuxTools" title="Make">
+<pre>[[LinuxTools]]
+
+&gt; In software development, Make is a build automation tool that automatically builds executable programs and libraries from source code by reading files called Makefiles which specify how to derive the target program.
+
+
+Makefile由一组规则（Rule）组成，每条规则的格式是：
+
+```
+target ... : prerequisites ... 
+	command1
+	command2
+	...
+```
+例如：
+
+```
+main: main.o stack.o maze.o
+	gcc main.o stack.o maze.o -o main
+```
+
+&lt;div class=&quot;box&quot;&gt;
+&quot;&quot;&quot;
+
+main是这条规则的目标（Target），main.o、stack.o和maze.o是这条规则的条件（Prerequisite）。目标和条件之间的关系是：欲更新目标，必须首先更新它的所有条件；所有条件中只要有一个条件被更新了，目标也必须随之被更新。所谓“更新”就是执行一遍规则中的命令列表，命令列表中的每条命令必须以一个Tab开头，注意不能是空格，Makefile的格式不像C语言的缩进那么随意，对于Makefile中的每个以Tab开头的命令，make会创建一个Shell进程去执行它。
+
+对于上面这个例子，make执行如下步骤：
+
+尝试更新Makefile中第一条规则的目标main，第一条规则的目标称为缺省目标，只要缺省目标更新了就算完成任务了，其它工作都是为这个目的而做的。由于我们是第一次编译，main文件还没生成，显然需要更新，但规则说必须先更新了main.o、stack.o和maze.o这三个条件，然后才能更新main。
+
+所以make会进一步查找以这三个条件为目标的规则，这些目标文件也没有生成，也需要更新，所以执行相应的命令（gcc -c main.c、gcc -c stack.c和gcc -c maze.c）更新它们。
+
+最后执行gcc main.o stack.o maze.o -o main更新main。
+&quot;&quot;&quot;
+&lt;/div&gt;</pre>
+</div>
 <div created="20200617041259877" modified="20200625044539922" tags="ci Algorithm" title="Merkle tree" type="text/x-markdown">
 <pre>[[Note]]
 
@@ -19997,8 +20066,10 @@ In computer science, inter-process communication or interprocess communication (
 链接：https://www.zhihu.com/question/304752391/answer/699930080
 </pre>
 </div>
-<div created="20200619185106854" modified="20200619185106854" title="PCB">
-<pre></pre>
+<div created="20200619185106854" modified="20200630084720075" tags="Process" title="PCB">
+<pre>
+每个进程在Linux内核中都有一个task_struct结构体来维护进程相关的信息，称为进程描述符（[[Process]]
+ Descriptor），而在操作系统理论中称为进程控制块（[[PCB]]，Process Control Block）。task_struct中有一个指针指向files_struct结构体，称为文件描述符表，其中每个表项包含一个指向已打开的文件的指针</pre>
 </div>
 <div created="20200626101940127" modified="20200626102335985" title="PCRE">
 <pre>PCRE - Perl Compatible Regular Expressions
@@ -20018,6 +20089,14 @@ In computer science, inter-process communication or interprocess communication (
 `(?&lt;=s)t` matches the first t in streets.	
 
 https://www.regular-expressions.info/refadv.html</pre>
+</div>
+<div created="20200630084602979" modified="20200630084620534" tags="Linux" title="Process">
+<pre>[[Linux]]
+&lt;div class=&quot;tc-table-of-contents&quot;&gt;
+
+&lt;&lt;toc-selective-expandable 'Process' sort[ind]&gt;&gt;
+
+&lt;/div&gt;</pre>
 </div>
 <div created="20200626143636901" modified="20200626171253698" tags="[[Algebraic data type]]" title="product type" type="text/x-markdown">
 <pre>&gt; A product type (from &quot;Cartesian product&quot;, i.e tuples) T = A * B means that a value of type T has a component that is of type A and another component that is of type B. It is used to aggregate parts into a whole.
@@ -20065,6 +20144,47 @@ This is why structs are called “product types”.
 
 &lt;/div&gt;
 </pre>
+</div>
+<div created="20200630091442012" modified="20200630093943233" tags="File&amp;IO" title="read/write">
+<pre>[[File&amp;IO]]
+
+&lt;div class=&quot;box&quot;&gt;
+&quot;&quot;&quot;
+
+
+写常规文件时，write的返回值通常等于请求写的字节数count，而向终端设备或网络写则不一定。
+
+读常规文件是不会[[阻塞(block)]]的，不管读多少字节，read一定会在有限的时间内返回。从终端设备或网络读则不一定，如果从终端输入的数据没有换行符，调用read读终端设备就会阻塞，如果网络上没有接收到数据包，调用read从网络读就会阻塞，至于会阻塞多长时间也是不确定的，如果一直没有数据到达就一直阻塞在那里。同样，写常规文件是不会阻塞的，而向终端设备或网络写则不一定。
+
+&quot;&quot;&quot;
+&lt;/div&gt;
+
+
+```
+#include &lt;unistd.h&gt;
+#include &lt;stdlib.h&gt;
+
+int main(void)
+{
+	char buf[10];
+	int n;
+	n = read(STDIN_FILENO, buf, 10);
+	if (n &lt; 0) {
+		perror(&quot;read STDIN_FILENO&quot;);
+		exit(1);
+	}
+	write(STDOUT_FILENO, buf, n);
+	return 0;
+}
+```
+
+第一次执行a.out的结果很正常，而第二次执行的过程有点特殊，现在分析一下：
+
+#Shell进程创建a.out进程，a.out进程开始执行，而Shell进程睡眠等待a.out进程退出。
+
+#a.out调用read时睡眠等待，直到终端设备输入了换行符才从read返回，read只读走10个字符，剩下的字符仍然保存在内核的终端设备输入缓冲区中。
+
+#a.out进程打印并退出，这时Shell进程恢复运行，Shell继续从终端读取用户输入的命令，于是读走了终端设备输入缓冲区中剩下的字符d和换行符，把它当成一条命令解释执行，结果发现执行不了，没有d这个命令。</pre>
 </div>
 <div created="20200628054351272" modified="20200628054351272" title="recvq">
 <pre></pre>
@@ -20438,6 +20558,31 @@ a weakly typed language has looser typing rules and may produce unpredictable re
 
 </pre>
 </div>
+<div created="20200630081603577" modified="20200630084833527" tags="File&amp;IO" title="Unbuffered IO">
+<pre>[[File&amp;IO]]
+
+&lt;div class=&quot;box&quot;&gt;
+&quot;&quot;&quot;
+
+open、read、[[write]]、close等系统函数称为无缓冲I/O（Unbuffered I/O）函数，因为它们位于C标准库的I/O缓冲区的底层
+
+&quot;&quot;&quot;
+&lt;/div&gt;
+
+# 用Unbuffered I/O函数每次读写都要进内核，调一个系统调用比调一个用户空间的函数要慢很多，所以在用户空间开辟I/O缓冲区还是必要的，用C标准I/O库函数就比较方便，省去了自己管理I/O缓冲区的麻烦。
+
+# 用C标准I/O库函数要时刻注意I/O缓冲区和实际文件有可能不一致，在必要时需调用fflush(3)。
+
+# 我们知道UNIX的传统是[[Everything is a file]]，I/O函数不仅用于读写常规文件，也用于读写设备，比如终端或网络设备。在读写设备时通常是不希望有缓冲的，例如向代表网络设备的文件写数据就是希望数据通过网络设备发送出去，而不希望只写到缓冲区里就算完事儿了，当网络设备接收到数据时应用程序也希望第一时间被通知到，所以网络编程通常直接调用Unbuffered I/O函数。
+
+&lt;div class=&quot;box&quot;&gt;
+&quot;&quot;&quot;
+
+事实上Unbuffered I/O这个名词是有些误导的，虽然write系统调用位于C标准库I/O缓冲区的底层，但在write的底层也可以分配一个内核I/O缓冲区，所以write也不一定是直接写到文件的，也可能写到内核I/O缓冲区中，至于究竟写到了文件中还是内核缓冲区中对于进程来说是没有差别的，如果进程A和进程B打开同一文件，进程A写到内核I/O缓冲区中的数据从进程B也能读到，而C标准库的I/O缓冲区则不具有这一特性
+
+&quot;&quot;&quot;
+&lt;/div&gt;</pre>
+</div>
 <div title="Untitled">
 <pre>&lt;meta http-equiv=&quot;Content-Type&quot; content=&quot;text/html;charset=UTF-8&quot;&gt;&lt;ol class=&quot;tc-toc toc-selective-expandable&quot; style=&quot;box-sizing: border-box; list-style-type: none; padding-left: 1em; color: rgb(172, 172, 172); font-family: -apple-system, system-ui, &amp;quot;Segoe UI&amp;quot;, Helvetica, Arial, sans-serif, &amp;quot;Apple Color Emoji&amp;quot;, &amp;quot;Segoe UI Emoji&amp;quot;, &amp;quot;Segoe UI Symbol&amp;quot;; font-size: 13.3px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: left; text-indent: 0px; text-transform: none; white-space: nowrap; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; background-color: rgb(255, 255, 255); text-decoration-style: initial; text-decoration-color: initial;&quot;&gt;&lt;li class=&quot;toc-item&quot; style=&quot;box-sizing: border-box; font-size: 0.95em; font-weight: 200; line-height: 1.5;&quot;&gt;&lt;span class=&quot; tc-reveal&quot; style=&quot;box-sizing: border-box;&quot;&gt;&lt;ol class=&quot;tc-toc toc-selective-expandable&quot; style=&quot;box-sizing: border-box; list-style-type: none; padding-left: 1em;&quot;&gt;&lt;li class=&quot;toc-item&quot; style=&quot;box-sizing: border-box; font-size: 0.95em; font-weight: 200; line-height: 1.5;&quot;&gt;&lt;span class=&quot; tc-reveal&quot; style=&quot;box-sizing: border-box;&quot;&gt;&lt;ol class=&quot;tc-toc toc-selective-expandable&quot; style=&quot;box-sizing: border-box; list-style-type: none; padding-left: 1em;&quot;&gt;&lt;li class=&quot;toc-item&quot; style=&quot;box-sizing: border-box; font-size: 0.95em; font-weight: 200; line-height: 1.5;&quot;&gt;&lt;span class=&quot; tc-reveal&quot; style=&quot;box-sizing: border-box;&quot;&gt;&lt;ol class=&quot;tc-toc toc-selective-expandable&quot; style=&quot;box-sizing: border-box; list-style-type: none; padding-left: 1em;&quot;&gt;&lt;li class=&quot;toc-item&quot; style=&quot;box-sizing: border-box; font-size: 0.95em; font-weight: 200; line-height: 1.5;&quot;&gt;&lt;span class=&quot; tc-reveal&quot; style=&quot;box-sizing: border-box;&quot;&gt;&lt;ol class=&quot;tc-toc toc-selective-expandable&quot; style=&quot;box-sizing: border-box; list-style-type: none; padding-left: 1em;&quot;&gt;&lt;li class=&quot;toc-item&quot; style=&quot;box-sizing: border-box; font-size: 0.95em; font-weight: 200; line-height: 1.5;&quot;&gt;&lt;a class=&quot;tc-tiddlylink tc-tiddlylink-resolves tc-popup-handle tc-popup-absolute&quot; href=&quot;#product%20type&quot; style=&quot;box-sizing: border-box; background-color: transparent; text-decoration: none; font-weight: normal; color: rgb(255, 187, 153); user-select: inherit; font-style: normal;&quot;&gt;&lt;span&gt; &lt;/span&gt;product type&lt;/a&gt;&lt;/li&gt;&lt;/ol&gt;&lt;/span&gt;&lt;/li&gt;&lt;/ol&gt;&lt;/span&gt;&lt;/li&gt;&lt;/ol&gt;&lt;/span&gt;&lt;/li&gt;&lt;/ol&gt;&lt;/span&gt;&lt;/li&gt;&lt;/ol&gt;&lt;br class=&quot;Apple-interchange-newline&quot;&gt;</pre>
 </div>
@@ -20448,6 +20593,9 @@ a weakly typed language has looser typing rules and may produce unpredictable re
 <pre>&lt;&lt;tabs &quot;[[A stroll through Stroll]] [[The TiddlyWiki layout]] [[Using tiddlers]] [[Linking in Stroll, part 1]] [[Linking in Stroll, part 2]] [[Linking in Stroll, part 3]] [[New tiddler linked here]] [[Two columns]] [[Advanced stuff]] [[Troubleshooting]] [[Stroll vs Roam]] [[Recent updates to Stroll]] [[Download Stroll]] [[Updating Stroll]] [[Add Stroll to your TW]] [[Get goodies]] [[Help / Acknowledgments]] [[Help us]]&quot; &quot;[[A stroll through Stroll]]&quot; &quot;$:/state/strollhometabs&quot; &quot;tc-vertical&quot;&gt;&gt;</pre>
 </div>
 <div created="20200624102555223" modified="20200624102614829" tags="Development" title="WorkExperience" type="text/x-markdown">
+<pre></pre>
+</div>
+<div created="20200630081810643" modified="20200630081810643" title="write">
 <pre></pre>
 </div>
 <div created="20200628080509933" modified="20200628080509933" title="中断">
@@ -20522,6 +20670,22 @@ https://www.zhihu.com/question/321235026/answer/659682220
 <div created="20200621074220750" modified="20200621074248973" tags="Quote" title="美团ddd" type="text/x-markdown">
 <pre>[[Quote]]
 https://tech.meituan.com/2017/12/22/ddd-in-practice.html</pre>
+</div>
+<div created="20200630092158999" modified="20200630092315225" tags="Process" title="阻塞(block)">
+<pre>
+[[Process]]
+
+&lt;div class=&quot;box&quot;&gt;
+&quot;&quot;&quot;
+
+当进程调用一个阻塞的系统函数时，该进程被置于睡眠（Sleep）状态，这时内核调度其它进程运行，直到该进程等待的事件发生了（比如网络上接收到数据包，或者调用sleep指定的睡眠时间到了）它才有可能继续运行。与睡眠状态相对的是运行（Running）状态，在Linux内核中，处于运行状态的进程分为两种情况：
+
+正在被调度执行。CPU处于该进程的上下文环境中，程序计数器（eip）里保存着该进程的指令地址，通用寄存器里保存着该进程运算过程的中间结果，正在执行该进程的指令，正在读写该进程的地址空间。
+
+就绪状态。该进程不需要等待什么事件发生，随时都可以执行，但CPU暂时还在执行另一个进程，所以该进程在一个就绪队列中等待被内核调度。系统中可能同时有多个就绪的进程，那么该调度谁执行呢？内核的调度算法是基于优先级和时间片的，而且会根据每个进程的运行情况动态调整它的优先级和时间片，让每个进程都能比较公平地得到机会执行，同时要兼顾用户体验，不能让和用户交互的进程响应太慢
+
+&quot;&quot;&quot;
+&lt;/div&gt;</pre>
 </div>
 
 
