--- a/wiki/index.html
+++ b/wiki/index.html
@@ -18206,8 +18206,8 @@ exports.context = contextWidget;
 <div created="20200418122101344" modified="20200625051822456" title="$:/state/tab/moresidebar-1850697562">
 <pre>$:/core/ui/MoreSideBar/Explorer</pre>
 </div>
-<div created="20200418121835270" modified="20200630093539804" title="$:/state/tab/sidebar--595412856">
-<pre>$:/core/ui/SideBar/Recent</pre>
+<div created="20200418121835270" modified="20200701114720640" title="$:/state/tab/sidebar--595412856">
+<pre>TableOfContents</pre>
 </div>
 <div created="20200504200956301" modified="20200628155701482" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/EditorToolbar</pre>
@@ -18248,16 +18248,16 @@ exports.context = contextWidget;
 <div created="20200629161600732" modified="20200629161600732" title="$:/state/toc/Programming language/Programming language theory/Type Theory-Algebraic data type--890961047">
 <pre>open</pre>
 </div>
-<div created="20200623171543251" modified="20200626143155465" title="$:/state/toc/TableOfContents-Development--118161433">
+<div created="20200623171543251" modified="20200701130442492" title="$:/state/toc/TableOfContents-Development--118161433">
 <pre>open</pre>
 </div>
 <div created="20200624163007047" modified="20200624163008038" title="$:/state/toc/TableOfContents-Development--398414299">
 <pre>close</pre>
 </div>
-<div created="20200626125201162" modified="20200627161448590" title="$:/state/toc/TableOfContents-Liberal arts--118161433">
-<pre>open</pre>
+<div created="20200626125201162" modified="20200701114724026" title="$:/state/toc/TableOfContents-Liberal arts--118161433">
+<pre>close</pre>
 </div>
-<div created="20200624163244790" modified="20200627161255773" title="$:/state/toc/TableOfContents-Quote--118161433">
+<div created="20200624163244790" modified="20200701114727655" title="$:/state/toc/TableOfContents-Quote--118161433">
 <pre>open</pre>
 </div>
 <div created="20200625044710343" modified="20200629161611881" title="$:/state/toc/TableOfContents/Development-Algorithm--118161433">
@@ -18284,8 +18284,8 @@ exports.context = contextWidget;
 <div created="20200626103143294" modified="20200626103143294" title="$:/state/toc/TableOfContents/Development/Formal language-Golang--118161433">
 <pre>open</pre>
 </div>
-<div created="20200626103456082" modified="20200629161523476" title="$:/state/toc/TableOfContents/Development/Formal language-Programming language--118161433">
-<pre>open</pre>
+<div created="20200626103456082" modified="20200701130448230" title="$:/state/toc/TableOfContents/Development/Formal language-Programming language--118161433">
+<pre>close</pre>
 </div>
 <div created="20200626103950075" modified="20200627161245746" title="$:/state/toc/TableOfContents/Development/Formal language-Regular expression--118161433">
 <pre>open</pre>
@@ -18305,8 +18305,8 @@ exports.context = contextWidget;
 <div created="20200625051717805" modified="20200625051849987" title="$:/state/toc/TableOfContents/Development/Network-Virtualization--118161433">
 <pre>open</pre>
 </div>
-<div created="20200624162111260" modified="20200624162111260" title="$:/state/toc/TableOfContents/Development/OS-Linux--118161433">
-<pre>open</pre>
+<div created="20200624162111260" modified="20200701130650295" title="$:/state/toc/TableOfContents/Development/OS-Linux--118161433">
+<pre>close</pre>
 </div>
 <div created="20200630081640736" modified="20200630081640736" title="$:/state/toc/TableOfContents/Development/OS/Linux-File&amp;IO--118161433">
 <pre>open</pre>
@@ -18371,7 +18371,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20200628163506618" list="File&amp;IO mmap ioctl read/write 阻塞(block)" modified="20200630144245377" title="$:/StoryList">
+<div created="20200628163506618" list="[[Regular expression]] regex OS [[Unbuffered IO]] File&amp;IO LinuxTools Golang" modified="20200702045232557" title="$:/StoryList">
 <pre></pre>
 </div>
 <div bag="default" created="20191206235905940" modified="20200218074428072" revision="0" tags="$:/tags/Stylesheet" title="$:/styles/onlyice/ui-elements" type="text/vnd.tiddlywiki">
@@ -19417,8 +19417,8 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200502174943975" modified="20200521150755106" title="$:/temp/RenameTags/search">
 <pre>blinks</pre>
 </div>
-<div created="20200418122544376" modified="20200630163534262" title="$:/temp/search">
-<pre></pre>
+<div created="20200418122544376" modified="20200702045226578" title="$:/temp/search">
+<pre>regex</pre>
 </div>
 <div created="20200626105030927" modified="20200626105030927" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html" url="https://tiddlywiki.com/library/v5.1.22/index.html">
 <pre>loaded</pre>
@@ -20306,14 +20306,16 @@ In computing, a computer program or subroutine is called reentrant if multiple i
 <div created="20200626103619995" modified="20200626103619995" title="regex">
 <pre></pre>
 </div>
-<div created="20200626103213797" modified="20200626104413866" tags="[[Formal language]]" title="Regular expression">
+<div created="20200626103213797" modified="20200702045245445" tags="[[Formal language]]" title="Regular expression">
 <pre>A regular expression (shortened as [[regex]] or regexp also referred to as rational expression) is a sequence of characters that define a search pattern.
 
 Usually such patterns are used by string searching algorithms for &quot;find&quot; or &quot;find and replace&quot; operations on strings, or for input validation.
 
 It is a technique developed in theoretical computer science and [[formal language]] theory.
 
-https://www.debuggex.com/cheatsheet/regex/pcre</pre>
+https://www.debuggex.com/cheatsheet/regex/pcre
+
+https://swtch.com/~rsc/regexp/regexp1.html</pre>
 </div>
 <div created="20200626103639942" modified="20200626103639942" title="Regular Expression">
 <pre></pre>
